<resources>
    <string name="All">All</string>
    <string name="All_A_Z">All: A-Z</string>
    <string name="Back">Back</string>
    <string name="Back_twice_to_exit">Press Back twice quickly to exit!</string>
    <string name="Bottom">Bottom</string>
    <string name="Cancel">Cancel</string>
    <string name="Click_Restricted_Group">Click restricted group to Open/Close</string>
    <string name="Confrontation_records">Confrontation records</string>
    <string name="Contact_your_reseller">Contact your reseller:</string>
    <string name="ContinueStr">Continue</string>
    <string name="Details">Details</string>
    <string name="Display_mode">Display mode</string>
    <string name="Draws">Draws</string>
    <string name="Exit">Exit</string>
    <string name="Fav_channel">Long press channel to favorite it!</string>
    <string name="Favorites">Favorites</string>
    <string name="Favorites_live">Favorites</string>
    <string name="Full_Screen">Full Screen</string>
    <string name="Glossary">Glossary</string>
    <string name="Horizontal">Horizontal</string>
    <string name="Hours">Hours</string>
    <string name="Ive_Already_Renewed">"I've Already Renewed"</string>
    <string name="List_toggle_display">VoD group display</string>
    <string name="Long_Press">Long Press</string>
    <string name="Losses">Losses</string>
    <string name="Minutes">Minutes</string>
    <string name="NetworkChange">Network connection changed, stopping Channel!</string>
    <string name="New">New</string>
    <string name="No">No</string>
    <string name="Not_started">Not started</string>
    <string name="Ongoing">Ongoing</string>
    <string name="Over">Over</string>
    <string name="Playback">Playback</string>
    <string name="Please_Input_Password">Please Input Password</string>
    <string name="Position">Position</string>
    <string name="Ranking">Ranking</string>
    <string name="Recommend">Recommend</string>
    <string name="Renovar_agora">Renew now</string>
    <string name="SKIP">SKIP</string>
    <string name="Scan_the_QR_code_with_your_mobile_phone_to_renew_your_plan">Scan the QR code with your mobile phone to renew your plan.</string>
    <string name="Search">Search</string>
    <string name="Settings">Settings</string>
    <string name="Setup">Setup</string>
    <string name="Source">Source</string>
    <string name="Submit">Submit</string>
    <string name="Subscribe">Subscribe</string>
    <string name="Subscription_has_been_removed">Subscription has been removed!</string>
    <string name="Subscription_successful">Subscription successful!</string>
    <string name="Subtitle_Off">Subtitle Off</string>
    <string name="Subtitles_Language">Subtitles &amp; Language</string>
    <string name="Telegram">Telegram</string>
    <string name="Top">Top</string>
    <string name="Upcoming_Events">Upcoming Events</string>
    <string name="Upload_log">Upload log</string>
    <string name="Vertical">Vertical</string>
    <string name="WATCH_NOW">WATCH NOW</string>
    <string name="WhatsApp">WhatsApp</string>
    <string name="Wins">Wins</string>
    <string name="Yes">Yes</string>
    <string name="Your_plan_expires_in_X_days" formatted="false">"Hello, %s 
Your plan expires in %s days!"</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us">Sobre a Evolux</string>
    <string name="about_us_text" />
    <string name="advise_delete_outdated_programs">The resource has been removed，please delete the collection.</string>
    <string name="already_latest_version">Already latest version!</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_id">CC1AD845</string>
    <string name="app_name">Evolux</string>
    <string name="auto_start">Run After Bootup</string>
    <string name="auto_start_off">Off</string>
    <string name="auto_start_on">On</string>
    <string name="autofill">Autofill</string>
    <string name="banner_adapter_null_error">Adapter is NULL!</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brands">BRADNDS</string>
    <string name="brightness">Brightness</string>
    <string name="buffer">Buffer</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_head_description">Current position is at the head of the live stream</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip Ad</string>
    <string name="cast_expanded_controller_skip_ad_text">You can skip ad in %1$d…</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_live_label">LIVE</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="change_password_parent">Change channel password</string>
    <string name="channel_offline">Channel is offline temporarily</string>
    <string name="channel_sources">Sources</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_update">Check Update</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_data">Clear history and cache</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click">Click</string>
    <string name="close">Close</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="history_section_title">History</string>
    <string name="i_need_help">I Need Help</string>
    <string name="passwd_new">new</string>
    <string name="passwd_old">old</string>
    <string name="remember_me_later">Remember Me Later</string>
    <string name="update_info">Update Information</string>
    <string name="update_later">Update Later</string>
    <string name="update_now">Update Now</string>
    <string name="update_skip">Skip this version</string>
    <string name="video_live">Live</string>
    <string name="video_playback_vod">Playback &amp; VoD</string>
    <string name="vod_downloads_continue">Continue</string>
    <string name="vod_downloads_edit">Edit</string>
    <string name="vod_downloads_movies">Movies</string>
    <string name="vod_downloads_series">Series</string>
    <string name="vod_downloads_title">Downloads</string>
</resources>