<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app1="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@mipmap/dialog_bg" android:layout_width="382.0dip" android:layout_height="275.0dip" android:weightSum="1.0">
        <RelativeLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <ImageView android:id="@id/dialog_icon" android:layout_width="50.0dip" android:layout_height="50.0dip" android:src="@mipmap/locked" android:layout_centerInParent="true" />
        </RelativeLayout>
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/dialog_title" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/title" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="" />
        <RelativeLayout android:id="@id/content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="57.0dip" android:layout_marginTop="22.5dip" android:layout_marginRight="42.0dip" android:layout_marginBottom="15.0dip">
            <TextView android:textSize="12.0sp" android:textColor="@color/dialog_message" android:id="@id/message" android:layout_width="wrap_content" android:layout_height="20.0dip" android:text="@string/Please_Input_Password" />
            <EditText android:textSize="18.0sp" android:textColor="@color/et_text_color" android:id="@id/old_password" android:background="@color/transparency" android:focusable="true" android:nextFocusRight="@id/new_password" android:layout_width="140.0dip" android:layout_height="50.0dip" android:layout_margin="0.0dip" android:hint="@string/passwd_old" android:layout_below="@id/message" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:inputType="textPassword" android:nextFocusForward="@id/new_password" android:textCursorDrawable="@drawable/edittext_cursor" android:layout_alignParentStart="true" />
            <TextView android:enabled="true" android:background="@color/et_text_color" android:layout_width="135.0dip" android:layout_height="1.0dip" android:layout_marginTop="39.0dip" android:layout_below="@id/message" android:layout_centerHorizontal="false" />
            <EditText android:textSize="18.0sp" android:textColor="@color/et_text_color" android:id="@id/new_password" android:background="@color/transparency" android:focusable="true" android:nextFocusLeft="@id/old_password" android:nextFocusRight="@id/positiveButton" android:nextFocusDown="@id/positiveButton" android:layout_width="140.0dip" android:layout_height="50.0dip" android:hint="@string/passwd_new" android:layout_below="@id/message" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:inputType="textPassword" android:nextFocusForward="@id/positiveButton" android:textCursorDrawable="@drawable/edittext_cursor" />
            <TextView android:enabled="true" android:background="@color/et_text_color" android:layout_width="140.0dip" android:layout_height="1.0dip" android:layout_marginTop="39.0dip" android:layout_below="@id/message" android:layout_alignParentRight="true" android:layout_centerHorizontal="false" />
            <TextView android:textSize="12.0sp" android:textColor="@android:color/holo_red_light" android:id="@id/error" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.5dip" android:text="error" android:layout_below="@id/old_password" />
        </RelativeLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="42.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="42.0dip">
            <Button android:textSize="12.0sp" android:textColor="@color/dialog_button" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/positiveButton" android:background="@drawable/dialog_btn_bg2" android:nextFocusLeft="@id/new_password" android:nextFocusRight="@id/negativeButton" android:nextFocusUp="@id/new_password" android:layout_width="100.0dip" android:layout_height="30.0dip" android:layout_marginRight="45.0dip" android:text="@string/Submit" android:nextFocusForward="@id/negativeButton" />
            <Button android:textSize="12.0sp" android:textColor="@color/dialog_button" android:gravity="center" android:layout_gravity="center" android:id="@id/negativeButton" android:background="@drawable/dialog_btn_bg2" android:nextFocusLeft="@id/positiveButton" android:nextFocusUp="@id/new_password" android:layout_width="100.0dip" android:layout_height="30.0dip" android:text="@string/Cancel" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>