<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/history_menu" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <org.bitspark.android.view.SafeNestedScrollView android:id="@id/history_scroll_view" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:id="@id/history_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="35.0dip" android:layout_marginBottom="10.0dip">
            <LinearLayout android:orientation="vertical" android:id="@id/download_history_section" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:id="@id/download_history_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vod_downloads_title" style="@style/history_title_text" />
                    <LinearLayout android:gravity="end|center" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="7.0dip" android:layout_weight="1.0">
                        <ImageView android:id="@id/download_history_check" android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/download_on" app:tint="@color/vod_border_color_start" />
                        <TextView android:textSize="14.0sp" android:textColor="#d9ffffff" android:id="@id/download_history_summary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" />
                        <TextView android:textSize="14.0sp" android:textColor="#59ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginRight="14.0dip" android:text="|" />
                        <TextView android:textSize="14.0sp" android:textColor="#d9ffffff" android:id="@id/download_history_used" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                        <TextView android:textSize="14.0sp" android:textColor="#59ffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="14.0dip" android:layout_marginRight="14.0dip" android:text="|" />
                        <TextView android:textSize="14.0sp" android:textColor="#d9ffffff" android:id="@id/download_history_free" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/download_continue_button" android:background="@drawable/history_download_action_bg" android:paddingLeft="18.0dip" android:paddingRight="18.0dip" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginLeft="18.0dip">
                            <ImageView android:layout_width="14.0dip" android:layout_height="14.0dip" android:src="@drawable/download" />
                            <TextView android:textSize="14.0sp" android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/vod_downloads_continue" />
                        </LinearLayout>
                        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/download_edit_button" android:background="@drawable/history_download_action_bg" android:paddingLeft="18.0dip" android:paddingRight="18.0dip" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginLeft="14.0dip">
                            <ImageView android:id="@id/download_edit_icon" android:layout_width="16.0dip" android:layout_height="16.0dip" android:src="@drawable/border_icon" app:tint="@android:color/white" />
                            <TextView android:textSize="14.0sp" android:textColor="@android:color/white" android:id="@id/download_edit_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/vod_downloads_edit" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <TextView android:textSize="18.0sp" android:id="@id/download_movies_title" android:visibility="gone" android:layout_marginTop="0.0dip" android:text="@string/vod_downloads_movies" style="@style/history_title_text" />
                <androidx.recyclerview.widget.RecyclerView android:id="@id/download_movies_rview" android:visibility="gone" android:scrollbars="none" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:nestedScrollingEnabled="false" />
                <TextView android:textSize="18.0sp" android:id="@id/download_series_title" android:visibility="gone" android:layout_marginTop="0.0dip" android:text="@string/vod_downloads_series" style="@style/history_title_text" />
                <androidx.recyclerview.widget.RecyclerView android:id="@id/download_series_rview" android:visibility="gone" android:scrollbars="none" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:nestedScrollingEnabled="false" />
            </LinearLayout>
            <TextView android:id="@id/history_section_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/history_section_title" style="@style/history_title_text" />
            <TextView android:textSize="18.0sp" android:id="@id/history_live_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/video_live" style="@style/history_title_text" />
            <include android:id="@id/live_history_placehold" android:visibility="gone" android:layout_width="175.0dip" android:layout_height="80.0dip" android:layout_marginTop="0.0dip" android:layout_marginBottom="8.0dip" layout="@layout/history_item_hold" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/history_live_rview" android:scrollbars="none" android:clipToPadding="false" android:descendantFocusability="beforeDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content" android:nestedScrollingEnabled="false" />
            <TextView android:textSize="18.0sp" android:id="@id/history_vod_title" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/video_playback_vod" style="@style/history_title_text" />
            <TextView android:textSize="18.0sp" android:id="@id/history_movies_title" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/vod_downloads_movies" style="@style/history_title_text" />
            <include android:id="@id/vod_history_placehold" android:visibility="gone" android:layout_width="175.0dip" android:layout_height="80.0dip" android:layout_marginTop="0.0dip" android:layout_marginBottom="8.0dip" layout="@layout/history_item_hold" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/history_vod_rview" android:scrollbars="none" android:clipToPadding="false" android:descendantFocusability="beforeDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content" android:nestedScrollingEnabled="false" />
            <TextView android:textSize="18.0sp" android:id="@id/history_series_title" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:text="@string/vod_downloads_series" style="@style/history_title_text" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/history_series_rview" android:visibility="gone" android:scrollbars="none" android:clipToPadding="false" android:descendantFocusability="beforeDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content" android:nestedScrollingEnabled="false" />
        </LinearLayout>
    </org.bitspark.android.view.SafeNestedScrollView>
    <FrameLayout android:id="@id/vod_detail_container" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</RelativeLayout>