<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app1="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_gravity="center" android:id="@id/iv_bg" android:background="@mipmap/dialog_bg" android:layout_width="400.0dip" android:layout_height="336.0dip" app1:layout_constraintBottom_toBottomOf="parent" app1:layout_constraintEnd_toEndOf="parent" app1:layout_constraintStart_toStartOf="parent" app1:layout_constraintTop_toTopOf="parent" />
    <ImageView android:id="@id/dialog_icon" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginTop="25.0dip" android:src="@mipmap/dialog_icon" android:layout_centerInParent="true" app1:layout_constraintEnd_toEndOf="@id/iv_bg" app1:layout_constraintStart_toStartOf="@id/iv_bg" app1:layout_constraintTop_toTopOf="@id/iv_bg" />
    <com.dinuscxj.progressbar.CircleProgressBar android:id="@id/dialog_progress" android:visibility="gone" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_margin="25.0dip" android:max="100" app1:layout_constraintEnd_toEndOf="@id/iv_bg" app1:layout_constraintStart_toStartOf="@id/iv_bg" app1:layout_constraintTop_toTopOf="@id/iv_bg" app1:progress_background_color="#ff717171" app1:progress_end_color="#991094a9" app1:progress_start_color="#9985ea92" app1:progress_stroke_width="3.0dip" app1:progress_text_color="@color/dialog_title" app1:progress_text_size="14.0dip" app1:style="solid_line" />
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/dialog_title" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/title" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:text="@string/update_info" app1:layout_constraintEnd_toEndOf="@id/iv_bg" app1:layout_constraintStart_toStartOf="@id/iv_bg" app1:layout_constraintTop_toTopOf="@id/iv_bg" />
    <TextView android:textSize="15.0sp" android:textColor="@color/dialog_message" android:gravity="center|left|top" android:id="@id/message" android:scrollbars="vertical" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="120.0dip" android:layout_marginBottom="65.0dip" android:text="dasd" android:singleLine="false" android:lineSpacingMultiplier="1.5" android:paddingStart="42.0dip" android:paddingEnd="42.0dip" app1:layout_constraintBottom_toBottomOf="@id/iv_bg" app1:layout_constraintEnd_toEndOf="@id/iv_bg" app1:layout_constraintStart_toStartOf="@id/iv_bg" app1:layout_constraintTop_toTopOf="@id/iv_bg" />
    <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" app1:layout_constraintBottom_toBottomOf="@id/iv_bg" app1:layout_constraintEnd_toEndOf="@id/iv_bg" app1:layout_constraintStart_toStartOf="@id/iv_bg">
        <Button android:textSize="13.0sp" android:textColor="@color/dialog_button" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/positiveButton" android:background="@drawable/dialog_btn_bg2" android:layout_width="110.0dip" android:layout_height="36.0dip" android:text="@string/update_later" />
        <Button android:textSize="13.0sp" android:textColor="@color/dialog_button" android:id="@id/cancelButton" android:background="@drawable/dialog_btn_bg2" android:layout_width="110.0dip" android:layout_height="36.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/update_skip" />
        <Button android:textSize="13.0sp" android:textColor="@color/dialog_button" android:gravity="center" android:layout_gravity="center" android:id="@id/negativeButton" android:background="@drawable/dialog_btn_bg2" android:layout_width="110.0dip" android:layout_height="36.0dip" android:text="@string/update_now" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>