<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cl_bg" android:tag="layout/fragment_payment_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/icon" android:layout_width="90.0dip" android:layout_height="28.0dip" android:layout_marginTop="80.0dip" android:src="@mipmap/payment_icon" android:scaleType="centerCrop" android:layout_marginStart="80.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="0.0dip" android:layout_height="392.0dip" android:layout_marginStart="80.0dip" android:layout_marginEnd="80.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/tv_title" android:layout_width="411.0dip" android:layout_height="wrap_content" android:text="Seu plano vence em 3 dias!" app:layout_constraintBottom_toTopOf="@id/tv_description" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
        <TextView android:textSize="11.0sp" android:textColor="@color/white" android:id="@id/tv_description" android:layout_width="411.0dip" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:text="A sua diversão não pode parar. Renove agora para não ficar sem acesso aos melhores conteúdos." app:layout_constraintBottom_toTopOf="@id/btn_i_have_renewed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_title" />
        <Button android:textSize="10.0sp" android:textColor="@color/white" android:id="@id/btn_i_have_renewed" android:background="@drawable/selector_payment_btn_bg" android:layout_width="wrap_content" android:layout_height="32.0dip" android:layout_marginTop="18.0dip" android:text="@string/Ive_Already_Renewed" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_description" />
        <Button android:textSize="10.0sp" android:textColor="@color/white" android:id="@id/btn_remember_me_later" android:background="@drawable/selector_payment_btn_bg" android:layout_width="wrap_content" android:layout_height="32.0dip" android:text="@string/remember_me_later" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" android:layout_marginStart="12.0dip" app:layout_constraintStart_toEndOf="@id/btn_i_have_renewed" app:layout_constraintTop_toTopOf="@id/btn_i_have_renewed" />
        <Button android:textSize="10.0sp" android:textColor="@color/white" android:id="@id/btn_i_need_help" android:background="@drawable/selector_payment_btn_bg2" android:layout_width="wrap_content" android:layout_height="32.0dip" android:text="@string/i_need_help" android:drawableStart="@drawable/customer_service_icon" android:paddingStart="10.0dip" android:paddingEnd="10.0dip" android:layout_marginStart="12.0dip" app:layout_constraintStart_toEndOf="@id/btn_remember_me_later" app:layout_constraintTop_toTopOf="@id/btn_i_have_renewed" />
        <ImageView android:id="@id/iv_qrcode" android:layout_width="225.0dip" android:layout_height="225.0dip" android:src="@drawable/qrcode_img" android:layout_marginEnd="75.0dip" app:layout_constraintBottom_toTopOf="@id/tv_qrcode_description" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
        <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/tv_qrcode_description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:text="@string/Scan_the_QR_code_with_your_mobile_phone_to_renew_your_plan" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/iv_qrcode" app:layout_constraintStart_toStartOf="@id/iv_qrcode" app:layout_constraintTop_toBottomOf="@id/iv_qrcode" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>